--- a/Resturants/Cell/CollectionsCCell/CollectionsCCell.xib
+++ b/Resturants/Cell/CollectionsCCell/CollectionsCCell.xib
@@ -24,7 +24,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="w01-X5-oRx">
                                 <rect key="frame" x="8" y="0.0" width="146" height="40"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Collection" translatesAutoresizingMaskIntoConstraints="NO" id="hXo-FK-j5g">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SavedCollection" translatesAutoresizingMaskIntoConstraints="NO" id="hXo-FK-j5g">
                                         <rect key="frame" x="0.0" y="0.0" width="15" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="15" id="Ff7-4a-o3W"/>
@@ -73,7 +73,7 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="Collection" width="16" height="19.333333969116211"/>
+        <image name="SavedCollection" width="11" height="13"/>
         <namedColor name="ColorWhite">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
